--- a/app/seasons/page.module.css
+++ b/app/seasons/page.module.css
@@ -1,31 +1,40 @@
-.image img{
-    max-width: 550px;
-    height: auto;
+.image {
     display: flex;
-    padding: 5%;
-}
-.main{
-    display: flex;
+    justify-content: center;
     align-items: center;
-    flex-direction: row;
+    width: 100%;
+
 }
-.titre{
+
+.image img {
+    width: 500px;
     display: flex;
+    padding-top: 4rem;
+    height: auto;
+    max-width: 100%;
+}
+
+
+.titre {
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    font-size: 4vw;
+    padding-top: .5rem;
     font-family: 'Gelasio', serif;
     font-style: italic;
-    padding-left: 5%;
 }
-.container {
+
+.textt {
     display: flex;
-    flex-direction: column;
     text-align: center;
-    align-items: flex-start;
-    justify-content: flex-start;
-}
-.textt{
-padding: 3%;
-text-align: center;
-align-items: center;
-font-family: 'Gelasio', serif;
-font-style: italic;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Gelasio', serif;
+    text-decoration: solid;
+    font-size: 2vw;
+    padding: 2%;
+    font-family: 'Gelasio', serif;
+    font-style: italic;
 }
