--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,63 +1,56 @@
-.main {
-    display: flex;
-    flex-direction: column; 
-    align-items: center;
-    justify-content: center; 
-    
-   
-  }
-  
-  .mainn {
-    
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-  
-  }
-  
-  .mainn img {
-    padding-top: 4rem;
-    max-width: 500px;
-    width: auto;
-    height: auto;
-  }
-  
-  .text {
-    text-decoration: solid;
-    font-style: italic;
-    line-height: 1.5;
-    font-family: 'Gelasio', serif;
-    text-align: center;
-    margin-top: 1rem; 
-    font-size: 50px;
-    padding-top: 4rem;
-    text-align: center;
-    padding-top: 2rem;
+.mainn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
 
-  }
-  
-  .scanss{
-    padding-top: 5rem;
-    font-size: 2rem;
-    text-decoration: none;
-    color: gray;
-    text-align: center;
-    
-      
-  }
-  
-  .taille {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 0.5rem;
-    margin-top: 2rem;
-    
-  }
-  
-  .taille img {
-    max-width: 500px;
-    height: auto;
-    width: auto;
-  }
-  
+.mainn img {
+  width: 500px;
+  display: flex;
+  padding-top: 4rem;
+  height: auto;
+  max-width: 100%;
+}
+
+.text {
+  font-style: italic;
+  line-height: 1.5;
+  font-family: 'Gelasio', serif;
+  text-align: center;
+  font-size: 3vw;
+  padding: 5%;
+  text-align: center;
+}
+
+.scanss {
+  display: flex;
+  padding-top: 5rem;
+  font-size: 1.8vw;
+  text-decoration: none;
+  color: gray;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.cube {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.tailles {
+  max-width: 33%;
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+}
+
+.tailles img {
+  max-width: 100%;
+  height: auto;
+  width: auto;
+}
