--- a/app/scans/page.module.css
+++ b/app/scans/page.module.css
@@ -1,21 +1,23 @@
 .page {
-    display: flex;
     text-align: center;
     align-items: center;
-    font-size: 25px;
     font-family: 'Gelasio', serif;
     font-style: italic;
     padding: 5%;
-    flex-direction: column;
-    font-size: 50px;
-  }
-  
-  .image img {
-    max-width: 1000px;
-    padding-top: 3%;
-    height: auto;
+    font-size: 4vw;
+
+}
+
+.image {
     display: flex;
-    justify-content: center;
+    padding: 5%;
     align-items: center;
- 
-  }
+    justify-content: center;
+}
+
+.image img {
+    max-height: 700px;
+    max-width: 100%;
+    height: auto;
+    width: auto;
+}
