--- a/components/Footer.module.css
+++ b/components/Footer.module.css
@@ -1,7 +1,7 @@
 .footer {
-    background-color:gray;
-    padding: 1rem;
+    background-color: gray;
     text-align: center;
     color: gray;
-    height: fit-content;
+    font-size: 1.5vw;
+
 }
