--- a/app/page.module.css
+++ b/app/page.module.css
@@ -50,7 +50,7 @@
 }
 
 .tailles img {
-  max-width: 100%;
-  height: auto;
-  width: auto;
+  max-width: 100%;  
+  height: auto;     
+  width: 100%;      
 }
