--- a/components/Header.module.css
+++ b/components/Header.module.css
@@ -9,8 +9,8 @@
 
 .header img {
   display: flex;
-  max-width: 80%;
-  width: 15rem;
+  max-width: 80vw;
+  width: 15vw;
   height: auto;
   padding: 1vw;
 }
